--- a/www/css/style.css
+++ b/www/css/style.css
@@ -73,7 +73,7 @@ body
 #testBox{
     
    width: 630px;
-    height: 170px;
+    height: auto;
     text-align: center;
    margin-left: auto;
    margin-right: auto;
@@ -81,3 +81,5 @@ body
     background-color: #fff;
     border: solid 1px #000;
 }
+
+
